--- a/src/com/abestanis/vhdl/run/VHDLRunConfigurationSettingsEditor.form
+++ b/src/com/abestanis/vhdl/run/VHDLRunConfigurationSettingsEditor.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.abestanis.vhdl.run.VHDLRunConfigurationSettingsEditor">
-  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="775" height="57"/>
@@ -16,17 +16,9 @@
           <text value="VHDL Interpreter"/>
         </properties>
       </component>
-      <component id="d356e" class="javax.swing.JComboBox" binding="interpreterSelect">
-        <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="608" height="24"/>
-          </grid>
-        </constraints>
-        <properties/>
-      </component>
       <component id="c0e4b" class="javax.swing.JTextField" binding="scriptInput">
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
@@ -40,16 +32,11 @@
           <text value="Source"/>
         </properties>
       </component>
-      <component id="db327" class="javax.swing.JButton" binding="addInterpreterButton">
+      <component id="662fe" class="com.intellij.ui.ComboboxWithBrowseButton" binding="interpreterComboboxWithButton" custom-create="true">
         <constraints>
-          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <minimum-size width="25" height="-1"/>
-            <preferred-size width="25" height="-1"/>
-          </grid>
+          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties>
-          <text value="..."/>
-        </properties>
+        <properties/>
       </component>
     </children>
   </grid>
